# aa-knapsack

./: .gitignore  Cargo.toml  README.md
checker/: .gitignore  bench.sh  benchmark_conf.json  check.c  check.sh  config_model.json  knapsack_dp.c  xmake.lua
checker/tests/mid/: test18.kp
checker/tests/n10/r01000/00Uncorrelated/: s000.kp  s001.kp  s002.kp  s003.kp  s004.kp
checker/tests/n10/r01000/02StronglyCorrelated/: s000.kp  s001.kp  s002.kp  s003.kp  s004.kp
checker/tests/n10/r01000/09SpannerStronglyCorrelated/: s000.kp  s001.kp  s002.kp  s003.kp  s004.kp
checker/tests/n10/r01000/12Circle/: s000.kp  s001.kp  s002.kp  s003.kp  s004.kp
checker/tests/n15/r01000/00Uncorrelated/: s000.kp  s001.kp  s002.kp  s003.kp  s004.kp
checker/tests/n15/r01000/02StronglyCorrelated/: s000.kp  s001.kp  s002.kp  s003.kp  s004.kp
checker/tests/n15/r01000/09SpannerStronglyCorrelated/: s000.kp  s001.kp  s002.kp  s003.kp  s004.kp
checker/tests/n15/r01000/12Circle/: s000.kp  s001.kp  s002.kp  s003.kp  s004.kp
checker/tests/n20/r01000/00Uncorrelated/: s000.kp  s001.kp  s002.kp  s003.kp  s004.kp
checker/tests/n20/r01000/02StronglyCorrelated/: s000.kp  s001.kp  (+3 more)
checker/tests/small/: test02.kp  test05.kp  test07.kp  test08.kp
checker/tests/special/: test32.kp  test33.kp  test34.kp
checker/tests_old/mid/: test19.kp
checker/tests_old/small/: test00.kp  test01.kp  test03.kp  test04.kp  test06.kp  test09.kp
checker/tests_old/special/: test30.kp  test31.kp
src/: benchmark.rs  knapsack.rs  lib.rs  main.rs
src/knapsack/: bkt.rs  dp.rs  fptas.rs  minknap.rs  sol_tree.rs
(+215 files in other folders)
