[package]
name = "knapsack"
version = "0.1.0"
edition = "2021"

[lib]
name = "knapsack"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.9"
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
criterion = "0.5.1"
serde = "1.0.217"
serde_json = "1.0.134"
lazy_static = "1.5.0"
strum_macros = "0.26.4"
ndarray = "0.16.1"
bitvec = "1.0.1"
